--- a/website/portfolio.html
+++ b/website/portfolio.html
@@ -51,7 +51,7 @@
       }
       </style>
 	  </head>
-	  <body bgcolor="#FF8533">
+	  <body bgcolor="LightBlue">
     <a href="index.html">Home</a>
     <a href="portfolio.html">Portfolio</a>
     <a href="aboutme.html">About Me</a>
