--- a/website/index.html
+++ b/website/index.html
@@ -43,7 +43,7 @@
       }
 
       body{
-        background-image: url('images/watercolor.jpg');
+        background-image: url("Images/watercolor.jpg");
         background-size: cover;
         background-repeat: no-repeat;
         background-attachment: fixed;
@@ -112,7 +112,7 @@
     <section>
       <img src="Images/cat1.jpg" height = 300px>
       <img src="Images/transparent.png" width = 100px>
-      <img src="Images/mage.jpg" height = 300px>
+      <img src="Images/mage.JPG" height = 300px>
       <img src="Images/transparent.png" width = 100px>
       <img src="Images/danceduo.JPG" height = 300px>
       <img src="Images/transparent.png" width = 100px>
