--- a/website/aboutme.html
+++ b/website/aboutme.html
@@ -44,7 +44,7 @@
       }
 
       body{
-        background-image: url('images/watercolor.jpg');
+        background-image: url("Images/watercolor.jpg");
         background-size: cover;
         background-repeat: no-repeat;
         background-attachment: fixed;
