--- a/website/portfolio.html
+++ b/website/portfolio.html
@@ -122,6 +122,24 @@
   
         </pre>
       </div>
+	
+      <center>
+        <img src="Images/stocksimulation.PNG" height= 400px>
+        <img src="Images/stockendscreen.PNG" height= 400px>
+
+        <div style="font-family: Montserrat, Helvetica Neue, Arial, sans-serif;">
+          <p>
+            Hangman is a game coded using Turtle in Python that simulates the popular children's word guessing game.
+            <br> 
+            A word is chosen from a predefined list of words and users are prompted to guess letters.
+            <br>
+            If the user correctly guesses a letter present in the word, the letters are written on the corresponding spaces of the word. If not, the incorrect letter is added to the bottom of the screen and a body part is added to the man.
+            <br>
+            If the user guesses all the letters of the word before all the man's body parts are drawn, they win!
+          </p>
+        </div>
+      </center>
+
 
       
     
