--- a/website/portfolio.html
+++ b/website/portfolio.html
@@ -124,9 +124,7 @@
       </div>
 	
       <center>
-        <img src="Images/stocksimulation.PNG" height= 400px>
-        <img src="Images/stockendscreen.PNG" height= 400px>
-
+        <img src="Images/project_2.PNG" height= 400px>
         <div style="font-family: Montserrat, Helvetica Neue, Arial, sans-serif;">
           <p>
             Hangman is a game coded using Turtle in Python that simulates the popular children's word guessing game.
