--- a/website/portfolio.html
+++ b/website/portfolio.html
@@ -122,6 +122,12 @@
   
         </pre>
       </div>
+		  
+      <section>
+        <h2>
+          Hangman Game
+        </h2>
+      </section>
 	
       <center>
         <img src="Images/project_2.PNG" height= 400px>
