--- a/website/portfolio.html
+++ b/website/portfolio.html
@@ -143,6 +143,40 @@
           </p>
         </div>
       </center>
+		  
+      <div class="spacer">
+        <pre>
+  
+  
+  
+        </pre>
+      </div>
+  
+      <section>
+        <h2>
+          Musical Frogs E-Card
+        </h2>
+      </section>
+
+      <br>
+      <br>
+
+      <center>
+        <img src="Images/frog_screen2.PNG" height= 400px>
+
+        <div style="font-family: Montserrat, Helvetica Neue, Arial, sans-serif;">
+          <p>
+            Musical Frogs is an e-card designed to brighten the lives of children at a local children's hospital
+            <br> 
+            Users can start by clicking on a lilypad to open up their e-card. 
+            <br>
+            They then can click on a frog to advance it across the screen from lilypad to lilypad, towards the goal of reaching the final message.
+            <br>
+            The end screen displays a get well soon message and several frogs. Users can click on each frog, which plays different musical notes. 
+          </p>
+        </div>
+      </center>
+
 
 
       
