--- a/website/portfolio.html
+++ b/website/portfolio.html
@@ -209,6 +209,39 @@
           </p>
         </div>
       </center>
+		  
+      <div class="spacer">
+        <pre>
+  
+  
+  
+        </pre>
+      </div>
+  
+      <section>
+        <h2>
+          Rover Phone Home
+        </h2>
+      </section>
+
+      <br>
+      <br>
+
+      <center>
+        <img src="Images/graphs.PNG" height= 400px>
+
+        <div style="font-family: Montserrat, Helvetica Neue, Arial, sans-serif;">
+          <p>
+            Mario Minigame is a platformer-style game based on the popular 80s Nintendo game, Mario. 
+            <br> 
+            Users use the left, right, and up arrow keys to move Mario across the screen and jump on to platforms. 
+            <br>
+            The goal of the game is to collect all the coins and squash the moving mushroom monsters (Goombas), without running headlong into the Goombas.
+            <br>
+            Users win the game by collecting all 9 coins and squashing both Goombas. However, the game over screen is displayed if Mario runs into the Goombas.
+          </p>
+        </div>
+      </center>
 		
 	  </body>
 	</html>
