--- a/website/portfolio.html
+++ b/website/portfolio.html
@@ -232,13 +232,11 @@
 
         <div style="font-family: Montserrat, Helvetica Neue, Arial, sans-serif;">
           <p>
-            Mario Minigame is a platformer-style game based on the popular 80s Nintendo game, Mario. 
+            The objective of Rover Phone Home was to use data visualization to analyze data collected by a rover's 4 sensors (light, sound, temperature, and gyro). 
             <br> 
-            Users use the left, right, and up arrow keys to move Mario across the screen and jump on to platforms. 
+            Based on the patterns that we found in our graphs, we analyzed descriptions of conditions in the 5 biomes and matched the rover's input to one of the 5 biomes.  
             <br>
-            The goal of the game is to collect all the coins and squash the moving mushroom monsters (Goombas), without running headlong into the Goombas.
-            <br>
-            Users win the game by collecting all 9 coins and squashing both Goombas. However, the game over screen is displayed if Mario runs into the Goombas.
+            This biome was Inland Forest, which had constant temperatures, ambient light, occasional thunderstorms, and low wind. These patterns were reflected in the rover sensor graphs.
           </p>
         </div>
       </center>
