--- a/website/portfolio.html
+++ b/website/portfolio.html
@@ -240,6 +240,37 @@
           </p>
         </div>
       </center>
+		  
+<div class="spacer">
+        <pre>
+  
+  
+  
+        </pre>
+      </div>
+  
+      <section>
+        <h2>
+          Rebellion Simulation
+        </h2>
+      </section>
+
+      <br>
+      <br>
+
+      <center>
+        <img src="Images/simulation.PNG" height= 400px>
+
+        <div style="font-family: Montserrat, Helvetica Neue, Arial, sans-serif;">
+          <p>
+            The objective of Rover Phone Home was to use data visualization to analyze data collected by a rover's 4 sensors (light, sound, temperature, and gyro). 
+            <br> 
+            Based on the patterns that we found in our graphs, we analyzed descriptions of conditions in the 5 biomes and matched the rover's input to one of the 5 biomes.  
+            <br>
+            This biome was Inland Forest, which had constant temperatures, ambient light, occasional thunderstorms, and low wind. These patterns were reflected in the rover sensor graphs.
+          </p>
+        </div>
+      </center>
 		
 	  </body>
 	</html>
