--- a/website/portfolio.html
+++ b/website/portfolio.html
@@ -263,11 +263,13 @@
 
         <div style="font-family: Montserrat, Helvetica Neue, Arial, sans-serif;">
           <p>
-            The objective of Rover Phone Home was to use data visualization to analyze data collected by a rover's 4 sensors (light, sound, temperature, and gyro). 
+            The "Rebellion" simulation on NetLogo is models the rebellion of a dissatisfied population suppressed by a police force. 
             <br> 
-            Based on the patterns that we found in our graphs, we analyzed descriptions of conditions in the 5 biomes and matched the rover's input to one of the 5 biomes.  
+            Turtles are used to represent agents (who can be active, jailed, or quiet) and police officers.
             <br>
-            This biome was Inland Forest, which had constant temperatures, ambient light, occasional thunderstorms, and low wind. These patterns were reflected in the rover sensor graphs.
+            Factors like officer and agent density, government legitimacy, perceived risk, and max jail time all contribute to the level and pattern of rebellions occurring.
+	    <br>
+	    This simulation can help us understand the complex mechanics of real-world rebellions, like those occurring in Iran presently. 
           </p>
         </div>
       </center>
