--- a/website/portfolio.html
+++ b/website/portfolio.html
@@ -263,7 +263,7 @@
 
         <div style="font-family: Montserrat, Helvetica Neue, Arial, sans-serif;">
           <p>
-            The "Rebellion" simulation on NetLogo is models the rebellion of a dissatisfied population suppressed by a police force. 
+            We analyzed the "Rebellion" simulation on NetLogo, which models the rebellion of a dissatisfied population suppressed by a police force. 
             <br> 
             Turtles are used to represent agents (who can be active, jailed, or quiet) and police officers.
             <br>
